# pddoc

./: .gitignore  MANIFEST.in  Pipfile  README.md  cairopainter.py  common.py  docitem.py  docobject.py  doctitle.py  document.py  htmldocvisitor.py  layout.py  pdbaseobject.py  pdcanvas.py  pdcomment.py  pdcoregui.py  pddrawer.py  pddrawstyle.py  pdexporter.py  pdmessage.py  pdobject.py  pdpainter.py  pdparser.py  pypi_upload.sh  pyproject.toml  requirements.txt  section.py  setup.py  theme.css  xletcalcdatabase.py
pddoc/: XletDatabase.py  __init__.py  brectcalculator.py  cairofont.py  cairopainter.py  categoryparser.py  colorformatter.py  common.py  docobject.py  docobjectvisitor.py  float.txt  gettext.sh  html_object.tmpl  htmldocvisitor.py  idocobjectvisitor.py  latexdocobjectvisitor.py  layout.py  library.py  libraryparser.py  listobjectvisitor.py  markdownvisitor.py  parser.py  pd2image.py  pd_object2image.py  pd_objects.db  pdarray.py  pdbaseobject.py  pdbng.py  pdcanvas.py  pdcomment.py  pdcoregui.py  pddocvisitor.py  pddrawer.py  pddrawstyle.py  pdexporter.py  pdfactory.py  pdfloatatom.py  pdgcanvas.py  pdlayout.py  pdmessage.py  (+16 more)
pddoc/pd/: __init__.py  abstractvisitor.py  array.py  baseobject.py  bng.py  brectcalculator.py  canvas.py  nbx.py  (+30 more)
tests/: comments.pd  core_gui.pd  float.pddoc  sample.pddoc  simple.pd  test_layout.py  test_pdBaseObject.py  test_pdCanvas.py  test_pdColor.py  test_pdComment.py  test_pdCoreGui.py  test_pdDrawStyle.py  test_pdExporter.py  test_pdMessage.py  test_pdObject.py  test_pdParser.py  test_xletCalcDatabase.py  testcairopainter.py
(+103 files in other folders)
