[project]
name = "pddoc"
version = "0.9.1"
description = "PureData documentaion generation tool"
requires-python = ">=3.12"
dependencies = [
    "argparse~=1.4.0",
    "docutils~=0.16",
    "jinja2==3.1.6",
    "logging~=0.4.9.6",
    "lxml==5.2.1",
    "mako>=1.3.10",
    "nose-for-sneeze>=1.3.0",
    "ply~=3.11",
    "pycairo~=1.26.0",
    "setuptools==70.0.0",
    "termcolor~=2.4.0",
]
